--- a/files/.config/i3/rofi.conf
+++ b/files/.config/i3/rofi.conf
@@ -10,7 +10,8 @@ rofi.font: Droid Sans Mono 12
 rofi.lines: 4
 rofi.eh: 2
 rofi.width: 100
-rofi.padding: 325
+rofi.padding: 350
+rofi.fullscreen: true
 
 rofi.color-enabled: true
 
