--- a/files/.config/i3/i3blocks.conf
+++ b/files/.config/i3/i3blocks.conf
@@ -116,7 +116,7 @@ interval=10
 
 # Date Time
 [time]
-command=date '+%d.%m.%Y %H:%M'
+command=date '+%d.%m.%Y - %H:%M'
 interval=5
 
 # Key indicators
