Fixed sync script, changed lockscreen behaviour

--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -141,7 +141,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # lock screen & suspend
-bindsym $mod+l exec --no-startup-id "/home/eike/.config/i3/locker.sh -o -s --suspendmins 0"
+bindsym $mod+l exec --no-startup-id "/home/eike/.config/i3/locker.sh -s --suspendmins 0"
 
 # lock screen & turn off monitor
 bindsym $mod+Shift+l exec --no-startup-id "/home/eike/.config/i3/locker.sh -o --screenoffsecs 2"
