Cleanup, migrated from vim to neovim.

--- a/files/.config/i3/rofi.conf
+++ b/files/.config/i3/rofi.conf
@@ -1,6 +1,6 @@
 !General
-rofi.terminal: /usr/bin/konsole
-rofi.run-shell-command: /usr/bin/konsole -e '{cmd}'
+rofi.terminal: /usr/bin/urxvt
+rofi.run-shell-command: /usr/bin/urxvt -e '{cmd}'
 
 !Search
 rofi.fuzzy: true
