--- a/files/.local/share/applications/neovim.desktop
+++ b/files/.local/share/applications/neovim.desktop
@@ -2,6 +2,6 @@
 Encoding=UTF-8
 Type=Application
 NoDisplay=true
-Name=vim
-Exec=/usr/bin/urxvt -e /usr/bin/vim
+Name=neovim
+Exec=/usr/bin/urxvt -e /usr/bin/nvim
 
