Added compton config to reduce tearing

--- a/files/.config/compton.conf
+++ b/files/.config/compton.conf
@@ -1,1 +1,6 @@
 opacity-rule = ["90:class_g = 'URxvt'"];
+
+backend = glx;
+glx-no-stencil = true;
+glx-copy-from-front = false;
+glx-swap-method = undefined;
