--- a/files/.local/share/applications/neovim.desktop
+++ b/files/.local/share/applications/neovim.desktop
@@ -1,7 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
-Type=Application
-NoDisplay=true
 Name=neovim
-Exec=/usr/bin/urxvt -e 'zsh -c /usr/bin/nvim'
-
+Comment=Edit textfile in neovim
+Type=Application
+Exec=urxvt -e zsh -ic "nvim %u" 
+Terminal=false
+StartupNotify=true
+NoDisplay=true
