Fixed CPU load status and added / usage.

--- a/files/.config/i3/i3blocks.conf
+++ b/files/.config/i3/i3blocks.conf
@@ -69,7 +69,6 @@ interval=20
 [memory]
 label=
 interval=20
-separator=false
 
 # Disk usage
 #
@@ -77,9 +76,14 @@ separator=false
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=
+label=
 interval=60
+separator=false
 
+[disk]
+label=
+instance=/
+interval=60
 
 # CPU usage
 #
@@ -87,8 +91,7 @@ interval=60
 # see the script for details.
 [cpu_usage]
 label=
-interval=10
-separator=false
+interval=5
 
 #[load_average]
 #interval=10
