Fixed tray icon position in multihead.

--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -208,7 +208,7 @@ bar
                 background $bg_color
                 statusline $text_color
         }
-
+		tray_output primary
         font pango: Droid Sans Mono, FontAwesome 10
 }
 
