--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -152,7 +152,7 @@ bindsym $mod+l exec --no-startup-id "/home/eike/.config/i3/locker.sh -s --suspen
 bindsym $mod+Shift+l exec --no-startup-id "/home/eike/.config/i3/locker.sh -o --screenoffsecs 2"
 
 # shutdown
-bindsym $mod+Shift+s exec "i3-nagbar -t warning -m 'You pressed the shutdown shortcut. Do you really want to shutdown now?' -b 'Yes, shutdown' 'systemctl poweroff'"
+bindsym $mod+Shift+s exec "i3-nagbar -t warning -m 'You pressed the shutdown shortcut. Do you really want to shutdown now?' -b 'Yes, shutdown' 'systemctl poweroff' -b 'Yes, reboot' 'systemctl reboot'"
 
 
 # resize window (you can also use the mouse for that)
