--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -231,7 +231,7 @@ exec --no-startup-id xautolock	-detectsleep \
 				-notify 10 -notifier "xset dpms force off" \
 				-time 20 -locker "$HOME/.config/i3/locker.sh -s --suspendmins 3" 
 # compositor
-exec --no-startup-id compton -f
+exec --no-startup-id compton
 
 # applications
 exec audacious
