Install qterminal, run PlugInstall in vim, run sync to add zsh theme

--- a/files/.config/i3/rofi.conf
+++ b/files/.config/i3/rofi.conf
@@ -1,6 +1,6 @@
 !General
-rofi.terminal: /usr/bin/urxvt
-rofi.run-shell-command: /usr/bin/urxvt -e '{cmd}'
+rofi.terminal: /usr/bin/qterminal
+rofi.run-shell-command: /usr/bin/qterminal -e '{cmd}'
 
 !Search
 rofi.fuzzy: true
