--- a/files/.local/share/applications/neovim.desktop
+++ b/files/.local/share/applications/neovim.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=neovim
 Comment=Edit textfile in neovim
 Type=Application
-Exec=urxvt -e zsh -ic "nvim %u" 
+Exec=qterminal -e nvim %u 
 Terminal=false
 StartupNotify=true
 NoDisplay=true
