--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -136,9 +136,6 @@ assign [class="Audacious"] $workspace10
 # set window parameters
 for_window [title="Steam Guard - Computer Authorization Required"] floating enable
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
-
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
@@ -155,7 +152,10 @@ bindsym $mod+Shift+l exec --no-startup-id "/home/eike/.config/i3/locker.sh -o --
 bindsym $mod+Shift+s exec "i3-nagbar -t warning -m 'You pressed the shutdown shortcut. Do you really want to shutdown now?' -b 'Yes, shutdown' 'systemctl poweroff' -b 'Yes, reboot' 'systemctl reboot'"
 
 # capture screenshot
-bindsym $mod+c exec --no-startup-id scrot -u "$HOME/screenshot-$( date +"%F_%T-%N" ).png"
+bindsym $mod+c exec --no-startup-id scrot "$HOME/screenshot-$( date +"%F_%T-%N" ).png"
+
+# capture screenshot of focused window
+bindsym $mod+Shift+c exec --no-startup-id scrot -u "$HOME/screenshot-$( date +"%F_%T-%N" ).png"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
