Added Firefox autostart. Added symlink deref to ls alias.

--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -240,6 +240,7 @@ exec --no-startup-id xautolock	-detectsleep \
 exec --no-startup-id compton
 
 # applications
+exec firefox
 exec audacious
 exec thunderbird
 
