Assigned the firefox workspace to open on the primary monitor.

--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -239,6 +239,6 @@ exec --no-startup-id xautolock	-detectsleep \
 
 # applications
 exec firefox
+workspace $workspace2 output primary
 exec audacious
 exec thunderbird
-
