Changed i3blocks icons, added QtCreators .user files to gitignore, removed ohmyzsh git plugin

--- a/files/.config/i3/i3blocks.conf
+++ b/files/.config/i3/i3blocks.conf
@@ -76,14 +76,14 @@ interval=20
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
+label=
+instance=/
+interval=60
+
+[disk]
 label=
 interval=60
 separator=false
-
-[disk]
-label=
-instance=/
-interval=60
 
 # CPU usage
 #
@@ -102,6 +102,7 @@ interval=5
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [temperature]
+label=
 interval=10
 
 # Battery indicator
