--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -54,6 +54,9 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
+# toggle split direction
+bindsym $mod+t split toggle
+
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
@@ -64,7 +67,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+Shift+a focus child
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%; exec --no-startup-id pkill -SIGRTMIN+10 i3blocks
