--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -10,3 +10,6 @@
 	conflictstyle = diff3
 [diff]
 	tool = vimdiff
+
+[mergetool "vimdiff"]
+	cmd = nvim -d $BASE $LOCAL $REMOTE $MERGED -c '$wincmd w' -c '$wincmd J'
