--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -39,6 +39,8 @@ bindsym $mod+Shift+Right move right
 # move focues workspace to output
 bindsym $mod+Ctrl+Left move workspace to output left
 bindsym $mod+Ctrl+Right move workspace to output right
+bindsym $mod+Ctrl+Up move workspace to output up
+bindsym $mod+Ctrl+Down move workspace to output down
 
 # split in horizontal orientation
 bindsym $mod+h split h
