--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -126,7 +126,7 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # workspace assignments
-assign [class="Firefox"] $workspace2
+assign [class="firefox"] $workspace2
 assign [class="Google-chrome"] $workspace2
 
 assign [class="QtCreator"] $workspace3
