--- a/files/.config/alacritty.yml
+++ b/files/.config/alacritty.yml
@@ -282,7 +282,7 @@ colors: *gruvbox-dark
     #save_to_clipboard: false
 
 # Allow terminal applications to change Alacritty's window title.
-dynamic_title: true
+window.dynamic_title: true
 
 cursor:
     # Cursor style
