--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -157,7 +157,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 bindsym $mod+l exec --no-startup-id "screenlock; systemctl suspend"
 
 # lock screen & turn off monitor
-bindsym $mod+Shift+l exec --no-startup-id "screenlock; xset dpms off"
+bindsym $mod+Shift+l exec --no-startup-id "screenlock; xset dpms force off"
 
 # shutdown
 bindsym $mod+Shift+s exec "i3-nagbar -t warning -m 'You pressed the shutdown shortcut. Do you really want to shutdown now?' -b 'Yes, shutdown' 'systemctl poweroff' -b 'Yes, reboot' 'systemctl reboot'"
