Added replacements for i3-nagbar using dmenu.

--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -151,7 +151,7 @@ for_window [title="Steam Guard - Computer Authorization Required"] floating enab
 bindsym $mod+Shift+r restart
 
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "dmenu_confirm 'Exit i3 now?' 'i3-msg exit'"
 
 # lock screen & suspend
 bindsym $mod+l exec --no-startup-id "screenlock; systemctl suspend"
@@ -160,7 +160,7 @@ bindsym $mod+l exec --no-startup-id "screenlock; systemctl suspend"
 bindsym $mod+Shift+l exec --no-startup-id "screenlock; xset dpms force off"
 
 # shutdown
-bindsym $mod+Shift+s exec "i3-nagbar -t warning -m 'You pressed the shutdown shortcut. Do you really want to shutdown now?' -b 'Yes, shutdown' 'systemctl poweroff' -b 'Yes, reboot' 'systemctl reboot'"
+bindsym $mod+Shift+s exec "dmenu_power"
 
 # capture screenshot
 bindsym $mod+c exec --no-startup-id scrot "$HOME/screenshot-$( date +"%F_%T-%N" ).png"
