Hardcoded amixer to use pipewires pulseaudio interface. Fixed confirm script

--- a/files/.config/i3/i3blocks.conf
+++ b/files/.config/i3/i3blocks.conf
@@ -38,12 +38,9 @@ markup=none
 #signal=10
 
 # Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
 [volume]
 label=
+MIXER=pulse
 instance=Master
 interval=once
 signal=10
@@ -60,9 +57,6 @@ separator=false
 instance=wlp3s0
 interval=20
 
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
