Added .cache (clangd and others) to global gitignore. Added passmenu bind to i3.

--- a/desktop/.config/i3/config
+++ b/desktop/.config/i3/config
@@ -232,6 +232,9 @@ bar
 
 # rofi launcher
 bindsym $mod+d exec rofi -show run -config $HOME/.config/i3/rofi.conf
+# passmenu
+bindsym $mod+p exec passmenu
+bindsym $mod+Shift+p exec passmenu --type
 
 # autostart
 # wallpaper
