--- a/desktop/.config/alacritty.yml
+++ b/desktop/.config/alacritty.yml
@@ -90,17 +90,17 @@ scrolling:
 # Font configuration
 font:
     # Normal (roman) font face
-    normal:
+    #normal:
         # Font family
         #
         # Default:
         #   - (macOS) Menlo
         #   - (Linux/BSD) monospace
         #   - (Windows) Consolas
-        # family: Droid Sans Mono
+        #family: Droid Sans Mono
 
         # The `style` can be specified to pick a specific face.
-        style: Regular
+        #style: Regular
 
     # Bold font face
     #bold:
@@ -136,7 +136,7 @@ font:
         #style: Bold Italic
 
     # Point size
-    size: 10.0
+    size: 9.0
 
     # Offset is the extra space around each character. `offset.y` can be thought of
     # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
