--- a/desktop/.config/i3/i3blocks.conf
+++ b/desktop/.config/i3/i3blocks.conf
@@ -24,7 +24,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME/$BLOCK_NAME
+command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -38,9 +38,12 @@ markup=none
 #signal=10
 
 # Volume indicator
-[volume]
-label=
-MIXER=pipewire
+[volume-pipewire]
+LONG_FORMAT="${SYMB} ${VOL}"
+SHORT_FORMAT="${SYMB} ${VOL}"
+AUDIO_HIGH_SYMBOL=
+AUDIO_MED_SYMBOL=
+AUDIO_LOW_SYMBOL=
 instance=Master
 interval=once
 signal=10
