--- a/desktop/.config/i3/config
+++ b/desktop/.config/i3/config
@@ -72,9 +72,9 @@ bindsym $mod+a focus parent
 bindsym $mod+Shift+a focus child
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec flock -n /tmp/volume.lock -c "exec pactl set-sink-volume 0 +5%" && pkill -RTMIN+10 i3blocks
-bindsym XF86AudioLowerVolume exec flock -n /tmp/volume.lock -c "exec pactl set-sink-volume 0 -5%" && pkill -RTMIN+10 i3blocks
-bindsym XF86AudioMute exec flock -n /tmp/volume.lock -c "pactl set-sink-mute 0 toggle" && pkill -RTMIN+10 i3blocks
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
