--- a/desktop/.config/polybar/config.ini
+++ b/desktop/.config/polybar/config.ini
@@ -87,12 +87,13 @@ label-focused-padding = 1
 
 label-unfocused = %name%: %icon%
 label-unfocused-background = ${colors.workspace_unfocused}
-label-unfocused-foreground = ${colors.foreground_alt}
+label-unfocused-foreground = ${colors.foreground}
 label-unfocused-padding = 1
 
 label-visible = %name%: %icon%
 label-visible-background = ${colors.workspace_visible}
 label-visible-foreground = ${colors.foreground}
+label-visible-underline = ${colors.foreground}
 label-visible-padding = 1
 
 label-urgent = %name%: %icon%
