--- a/desktop/.config/alacritty.yml
+++ b/desktop/.config/alacritty.yml
@@ -211,7 +211,8 @@ colorschemes:
         # Default colors
         primary:
             # hard contrast:
-            background: '#1d2021'
+            # background: '#1d2021'
+            background: '#282828'
             # normal contrast:
             # background: '#282828'
             # soft contrast:
