Added battery indicator

--- a/desktop/.config/polybar/config.ini
+++ b/desktop/.config/polybar/config.ini
@@ -29,7 +29,7 @@ padding-right = 2
 module-margin = 2
 
 modules-left = i3
-modules-right = pulseaudio fs_root fs_home memory cpu wlan eth date
+modules-right = pulseaudio fs_root fs_home memory cpu wlan eth battery date
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -167,6 +167,12 @@ type = internal/date
 interval = 1
 date = %Y-%m-%d %H:%M:%S
 label = %date%
+
+[module/battery]
+type = internal/battery
+full-at = 95
+low-at = 10
+poll-interval = 5
 
 [settings]
 screenchange-reload = true
